# docs/swagger/swagger.yaml
@@ -1,29 +1,25 @@
 basePath: '{{.BasePath}}'
 definitions:
-  model.CreateUser:
+  model.CreateProduct:
     properties:
-      avatar:
-        description: Ảnh đại diện
+      description:
+        description: Mô tả sản phẩm
         type: string
-      email:
-        description: Địa chỉ email
+      image:
+        description: Ảnh sản phẩm
         type: string
-      full_name:
+      manufacture:
+        description: Hãng sản xuất
+        type: string
+      price:
+        description: Giá sản phẩm
+        type: integer
+      product_name:
         description: Tên hiển thị
         type: string
-      password:
-        description: Mật khẩu phải có tối thiểu 8 ký tự
-        type: string
-      phone:
-        description: Số điện thoại
-        type: string
-      roles:
-        description: |-
-          Mảng các quyền hạn (Role) của User (ví dụ [3, 5] tức là User có Role Id là 3 và 5).
-          Một User có thể có nhiều Role, nếu Null tức là User không có quyền gì
-        items:
-          type: int32
-        type: array
+      quantity:
+        description: Số lượng
+        type: integer
     type: object
   model.HTTPError:
     properties:
@@ -40,16 +36,16 @@ info:
   title: '{{.Title}}'
   version: '{{.Version}}'
 paths:
-  /auth/create-user:
+  /auth/create-product:
     post:
-      description: Tạo User
+      description: Tạo Product
       parameters:
-      - description: Thông tin tạo User
+      - description: Thông tin tạo sản phẩm
         in: body
         name: user
         required: true
         schema:
-          $ref: '#/definitions/model.CreateUser'
+          $ref: '#/definitions/model.CreateProduct'
           type: object
       responses:
         "200":
@@ -63,9 +59,9 @@ paths:
             type: object
       tags:
       - admin
-  /auth/delete-user/{id}:
+  /auth/delete-product/{id}:
     delete:
-      description: Xóa User theo ID
+      description: Xóa Product theo ID
       responses:
         "200":
           description: OK
@@ -83,9 +79,9 @@ paths:
             type: object
       tags:
       - admin
-  /auth/get-user/{id}:
+  /auth/get-product/{id}:
     get:
-      description: Lấy thông tin User theo ID
+      description: Lấy thông tin Product theo ID
       responses:
         "200":
           description: OK
@@ -103,9 +99,9 @@ paths:
             type: object
       tags:
       - admin
-  /auth/get-users:
+  /auth/get-products:
     get:
-      description: Lấy danh sách User
+      description: Lấy danh sách Products
       responses:
         "200":
           description: OK
@@ -118,9 +114,9 @@ paths:
             type: object
       tags:
       - admin
-  /auth/update-user/{id}:
+  /auth/update-product/{id}:
     put:
-      description: Cập nhật User theo ID
+      description: Cập nhật Product theo ID
       responses:
         "200":
           description: OK
