# router/admin.go
@@ -7,9 +7,16 @@ import (
 )
 
 func setupAdminRoutes(c *controller.Controller, api *gin.RouterGroup) {
-	api.GET("/get-users", c.GetUsers)
-	api.POST("/create-user", c.CreateUser)
-	api.GET("/get-user/:id", c.GetUserById)
-	api.PUT("/update-user/:id", c.UpdateUserById)
-	api.DELETE("/delete-user/:id", c.DeleteUserById)
+	//api.GET("/get-users", c.GetUsers)
+	//api.POST("/create-user", c.CreateUser)
+	//api.GET("/get-user/:id", c.GetUserById)
+	//api.PUT("/update-user/:id", c.UpdateUserById)
+	//api.DELETE("/delete-user/:id", c.DeleteUserById)
+
+
+	api.GET("/get-products", c.GetProducts)
+	api.POST("/create-product", c.CreateProduct)
+	api.GET("/get-products/:id", c.GetProductById)
+	api.PUT("/update-products/:id", c.UpdateProductById)
+	api.DELETE("/delete-product/:id", c.DeleteProductById)
 }
